--- a/index.html
+++ b/index.html
@@ -87,43 +87,43 @@
         <div class="shop-sec">
             <div class="box1 box">
                 <h2>Shop deals in Ornaments</h2>
-                <div class="b1image"></div>
+                <div class="b1image scale"></div>
                 <a class="an1" href="amazon.in">see all deals</a>
             </div>
             <div class="box2 box">
                 <h2>Shop deals in Electronics</h2>
-                <div class="b2image"></div>
+                <div class="b2image scale"></div>
                 <a class="an1" href="amazon.in">see all deals</a>
             </div>
             <div class="box3 box">
                 <h2>Shop deals in groceries</h2>
-                <div class="b3image"></div>
+                <div class="b3image scale"></div>
                 <a class="an1" href="amazon.in">see all deals</a></div>
             <div class="box4 box">
                 <h2>Shop deals in Fashion</h2>
-                <div class="b4image"></div>
+                <div class="b4image scale"></div>
                 <a class="an1" href="amazon.in">see all deals</a></div></div>
         </div>
         <br>
         <div class="shop-sec">
             <div class="box1 box">
                 <h2>Prime Videos</h2>
-                <div class="b5image"></div>
+                <div class="b5image scale"></div>
                 <a class="an1" href="amazon.in">Watch Prime</a>
             </div>
             <div class="box6 box">
                 <h2>Gaming Accessories</h2>
-                <div class="b6image"></div>
+                <div class="b6image scale"></div>
                 <a class="an1" href="amazon.in">see more</a>
             </div>
             <div class="box7 box">
                 <h2>Tennis(Sports equipment)</h2>
-                <div class="b7image"></div>
+                <div class="b7image scale"></div>
                 <a class="an1" href="amazon.in">see more</a>
             </div>
             <div class="box8 box">
                 <h2>Luxury watches</h2>
-                <div class="b8image"></div>
+                <div class="b8image scale"></div>
                 <a class="an1" href="amazon.in">see more</a>
             </div>
         </div>
@@ -184,7 +184,7 @@
     <div class="copy">
         <div class="fstl">Conditions of Use
         Privacy Notice
-        <a id="ai1" href="#">Consumer Health Data Privacy Disclosure</a>
+        <a id="ai1" href="#">Consumer Health Data Privacy Disclosure</a>    
         <a id="ai2">Your Ads Privacy Choices</div></a>
         <div class="cright">
             <i class="fa-solid fa-copyright"></i>
